fixed csv cancellation if something goes wrong